# My-AI-Agent

./: .gitignore  main.py  main_live_chat.py  main_vc.py  main_voice_chat.py  pyproject.toml  test.py  tools.py
Agents/: agent_gemini.py  agent_ollama.py
Functions/: modifing_files.py  open_url.py  play_audio.py  renaming_to_episodes.py  speech_to_text.py  text_to_speech.py  wake_word.py
Tools/: app_file_tools.py  basic_tools.py
config/: system_prompt.py  system_prompt.txt
sanctuary_wake_word/: sanctuary_en_windows_v3_0_0.ppn
